tamamlandı.